# crew-web-search-twitter-thread

./: .gitignore  README.md  pyproject.toml
src/web_search_to_twitter_thread/: crew.py  main.py
src/web_search_to_twitter_thread/config/: agents.yaml  tasks.yaml
src/web_search_to_twitter_thread/tools/: serper_tool.py
